--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,10 @@ dj-database-url==0.5.0
 Django==3.1.4
 django-heroku==0.3.1
 gunicorn==20.0.4
+heroku==0.1.4
 idna==2.10
 psycopg2==2.8.6
+python-dateutil==1.5
 pytz==2020.4
 requests==2.25.1
 soupsieve==2.1
